--- a/sosoorder/pom.xml
+++ b/sosoorder/pom.xml
@@ -249,6 +249,15 @@
 			<version>3.14</version>
 		</dependency>
 		
+		<!-- To convert XML File in to JSON -->
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20140107</version>
+        </dependency>
+
+		
 
 	</dependencies>
 	<build>
