--- a/sosoorder/pom.xml
+++ b/sosoorder/pom.xml
@@ -274,8 +274,20 @@
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>${org.springframework.security-version}</version>
 		 </dependency>
+		 
+		 <!-- 웹소켓 -->
+		  <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-websocket</artifactId>
+	        <version>${org.springframework-version}</version>
+	   	 </dependency>
+	   	 
+	   	 <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
 
-		
 
 	</dependencies>
 	<build>
