--- a/sosoorder/pom.xml
+++ b/sosoorder/pom.xml
@@ -31,11 +31,24 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+		
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
+		<!-- httpcore(카카오) -->
+		<dependency>
+		  <groupId>org.apache.httpcomponents</groupId>
+		  <artifactId>httpcore</artifactId>
+		  <version>4.4.6</version>
+		</dependency>
 		
+		<!-- httpclient(카카오) -->
+		<dependency>
+		  <groupId>org.apache.httpcomponents</groupId>
+		  <artifactId>httpclient</artifactId>
+		  <version>4.5.2</version>
+		</dependency>
 		<!-- spring-test -->
 		<dependency>
 			<groupId>org.springframework</groupId>
