--- a/sosoorder/pom.xml
+++ b/sosoorder/pom.xml
@@ -17,6 +17,13 @@
 		<org.apache.tiles-version>3.0.7</org.apache.tiles-version>
 	</properties>
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/com.oracle.ojdbc/ojdbc8 -->
+		<dependency>
+		    <groupId>com.oracle.ojdbc</groupId>
+		    <artifactId>ojdbc8</artifactId>
+		    <version>19.3.0.0</version>
+		</dependency>
+				
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
